# django-request-logger

./: .pre-commit-config.yaml  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
core/: urls.py
core/api/: serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
django_request_logger/: admin.py  apps.py  middleware.py  models.py
django_request_logger/management/commands/: clear_logs.py
django_request_logger/migrations/: 0001_initial.py  0001_squashed_0002_requestlog_execution_time_requestlog_method.py  0002_requestlog_execution_time_requestlog_method.py  0003_alter_requestlog_execution_time_and_more.py  0004_requestlog_response_content_type.py  0005_requestlog_client_ip_requestlog_headers.py  0006_requestlog_is_slow.py  0007_requestlog_body_content_type_and_more.py  0008_requestlog_is_pinned.py
django_request_logger/templates/admin/django_request_logger/requestlog/: change_list.html
django_request_logger/tests/: factories.py  test_requestlog.py
proj/: settings.py  urls.py
